--- a/Flooding/MainWindow.xaml
+++ b/Flooding/MainWindow.xaml
@@ -10,31 +10,53 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid RowSpacing="8" ColumnSpacing="16" Padding="16">
+    <Grid RowSpacing="8" ColumnSpacing="8" Padding="16">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource CaptionTextBlockStyle}">次数</TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1"/>
-        <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Style="{StaticResource CaptionTextBlockStyle}">间隔</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1"/>
-        <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,4,0,0" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Style="{StaticResource CaptionTextBlockStyle}">内容</TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" AcceptsReturn="True"/>
-        <ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}">
+        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"
+                   Style="{StaticResource CaptionTextBlockStyle}">
+            次数
+        </TextBlock>
+        <TextBox Grid.Row="0" Grid.Column="1" />
+        <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"
+                   Style="{StaticResource CaptionTextBlockStyle}">
+            间隔
+        </TextBlock>
+        <TextBox Grid.Row="1" Grid.Column="1" />
+
+        <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"
+                   Style="{StaticResource CaptionTextBlockStyle}">
+            内容
+        </TextBlock>
+        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap"
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+
+        <ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,8,0,0"
+                     Background="{ThemeResource SystemBaseLowColor}">
             <ProgressBar.Resources>
                 <x:Double x:Key="ProgressBarTrackHeight">4</x:Double>
             </ProgressBar.Resources>
         </ProgressBar>
-        <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Margin="0,8,0,0" Style="{ThemeResource AccentButtonStyle}">启动</Button>
+
+        <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" ColumnSpacing="8">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0">文档</Button>
+            <Button Grid.Column="1" HorizontalAlignment="Stretch" Style="{ThemeResource AccentButtonStyle}">启动</Button>
+        </Grid>
     </Grid>
 </drastic:MicaWindow>
