--- a/Flooding/MainWindow.xaml
+++ b/Flooding/MainWindow.xaml
@@ -1,6 +1,3 @@
-<!-- Copyright (c) Microsoft Corporation and Contributors. -->
-<!-- Licensed under the MIT License. -->
-
 <drastic:MicaWindow
     x:Class="Flooding.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -10,52 +7,40 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid RowSpacing="8" ColumnSpacing="8" Padding="16">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
+    <Grid RowSpacing="8" Padding="16">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"
-                   Style="{StaticResource CaptionTextBlockStyle}">
-            次数
-        </TextBlock>
-        <TextBox Grid.Row="0" Grid.Column="1" />
-        <TextBlock Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"
-                   Style="{StaticResource CaptionTextBlockStyle}">
-            间隔
-        </TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1" />
-
-        <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"
-                   Style="{StaticResource CaptionTextBlockStyle}">
-            内容
-        </TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap"
+        <NumberBox Grid.Row="0" Header="次数" SpinButtonPlacementMode="Inline"
+                   IsEnabled="{x:Bind BoolNegation(_viewmodel.IsFloodingTimesLimited), Mode=OneWay}"
+                   Value="{x:Bind _viewmodel.FloodTimes, Mode=TwoWay}" SmallChange="10" LargeChange="100" Minimum="1" >
+        </NumberBox>
+        <NumberBox Grid.Row="1" Margin="0,8,0,0" Header="间隔（毫秒）" SpinButtonPlacementMode="Inline"
+                   Value="{x:Bind _viewmodel.FloodingInterval, Mode=TwoWay}" SmallChange="100" LargeChange="1000"
+                   Minimum="1" />
+        <TextBox Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" Header="内容" AcceptsReturn="True" TextWrapping="Wrap"
                  ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+        <CheckBox Grid.Row="3" Margin="0,8,0,0" IsChecked="{x:Bind _viewmodel.IsFloodingTimesLimited, Mode=TwoWay}">无限次数</CheckBox>
 
-        <ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,8,0,0"
-                     Background="{ThemeResource SystemBaseLowColor}">
+        <ProgressBar Grid.Row="4" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}">
             <ProgressBar.Resources>
                 <x:Double x:Key="ProgressBarTrackHeight">4</x:Double>
             </ProgressBar.Resources>
         </ProgressBar>
 
-        <Grid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" ColumnSpacing="8">
+        <Grid Grid.Row="5" ColumnSpacing="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0">文档</Button>
+            <Button Grid.Column="0">Github</Button>
             <Button Grid.Column="1" HorizontalAlignment="Stretch" Style="{ThemeResource AccentButtonStyle}">启动</Button>
         </Grid>
     </Grid>
