--- a/Flooding/MainWindow.xaml
+++ b/Flooding/MainWindow.xaml
@@ -18,13 +18,13 @@
         </Grid.RowDefinitions>
 
         <NumberBox Grid.Row="0" Header="次数" SpinButtonPlacementMode="Inline"
-                   IsEnabled="{x:Bind BoolNegation(_viewmodel.IsFloodingTimesLimited), Mode=OneWay}"
+                   IsEnabled="{x:Bind IsFloodingTimesNumberBoxEnabled, Mode=OneWay}"
                    Value="{x:Bind _viewmodel.FloodTimes, Mode=TwoWay}" SmallChange="10" LargeChange="100" Minimum="1" />
         <NumberBox Grid.Row="1" Margin="0,8,0,0" Header="间隔（毫秒）" SpinButtonPlacementMode="Inline"
                    Value="{x:Bind _viewmodel.FloodingInterval, Mode=TwoWay}" SmallChange="100" LargeChange="1000"
                    Minimum="1" />
         <TextBox Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" Header="内容" AcceptsReturn="True" TextWrapping="Wrap"
-                 ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto" Text="{x:Bind _viewmodel.FloodText, Mode=TwoWay}" />
         <CheckBox Grid.Row="3" Margin="0,8,0,0" IsChecked="{x:Bind _viewmodel.IsFloodingTimesLimited, Mode=TwoWay}">无限次数</CheckBox>
 
         <ProgressBar Grid.Row="4" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}">
@@ -40,7 +40,8 @@
 
             <Button Grid.Column="0">Github</Button>
             <Button Grid.Column="1" HorizontalAlignment="Stretch" Style="{ThemeResource AccentButtonStyle}"
-                    Click="{x:Bind ActionButtonClick}" Content="{x:Bind ButtonText, Mode=OneWay}" />
+                    Command="{x:Bind MasterButtonCommand, Mode=OneWay}"
+                    Content="{x:Bind MasterButtonText, Mode=OneWay}" />
         </Grid>
     </Grid>
 </drastic:MicaWindow>
