--- a/Flooding/MainWindow.xaml
+++ b/Flooding/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="Flooding.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:drastic="using:Drastic.UI.Xaml"
+    xmlns:qc="using:CalcBinding"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -18,18 +19,19 @@
         </Grid.RowDefinitions>
 
         <NumberBox Grid.Row="0" Header="次数" SpinButtonPlacementMode="Inline"
-                   IsEnabled="{x:Bind IsFloodingTimesNumberBoxEnabled, Mode=OneWay}"
+                   IsEnabled="{x:Bind IsFloodTimesNumberBoxEnabled, Mode=OneWay}"
                    Value="{x:Bind _viewmodel.FloodTimes, Mode=TwoWay}" SmallChange="10" LargeChange="100" Minimum="1" />
         <NumberBox Grid.Row="1" Margin="0,8,0,0" Header="间隔（毫秒）" SpinButtonPlacementMode="Inline"
+                   IsEnabled="{x:Bind IsFloodingIntervalNumberBoxEnabled, Mode=OneWay}"
                    Value="{x:Bind _viewmodel.FloodingInterval, Mode=TwoWay}" SmallChange="100" LargeChange="1000"
                    Minimum="1" />
         <TextBox Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" Header="内容" AcceptsReturn="True" TextWrapping="Wrap"
+                 IsEnabled="{x:Bind IsFloodTextTextBoxEnabled, Mode=OneWay}"
                  ScrollViewer.HorizontalScrollBarVisibility="Auto" Text="{x:Bind _viewmodel.FloodText, Mode=TwoWay}" />
-        <CheckBox Grid.Row="3" Margin="0,8,0,0" IsChecked="{x:Bind _viewmodel.IsFloodingTimesLimited, Mode=TwoWay}">无限次数</CheckBox>
+        <CheckBox Grid.Row="3" Margin="0,8,0,0" IsChecked="{x:Bind _viewmodel.IsFloodingUnlimited, Mode=TwoWay}" IsEnabled="{x:Bind IsFloodingUnlimitedCheckBoxEnabled, Mode=OneWay}">无限次数</CheckBox>
 
-        <ProgressBar Grid.Row="4" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}"
+        <ProgressBar Grid.Row="4" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}" IsIndeterminate="{x:Bind IsProgressBarIndeterminate, Mode=OneWay}"
                      Value="{x:Bind _viewmodel.Progress, Mode=OneWay}" />
-
         <Grid Grid.Row="5" ColumnSpacing="8">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
