--- a/Flooding/MainWindow.xaml
+++ b/Flooding/MainWindow.xaml
@@ -27,7 +27,7 @@
                    Minimum="1" />
         <TextBox Grid.Row="2" Grid.Column="0" Margin="0,8,0,0" Header="内容" AcceptsReturn="True" TextWrapping="Wrap"
                  IsEnabled="{x:Bind IsFloodTextTextBoxEnabled, Mode=OneWay}"
-                 ScrollViewer.HorizontalScrollBarVisibility="Auto" Text="{x:Bind _viewmodel.FloodText, Mode=TwoWay}" />
+                 ScrollViewer.HorizontalScrollBarVisibility="Auto" Text="{x:Bind _viewmodel.FloodText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
         <CheckBox Grid.Row="3" Margin="0,8,0,0" IsChecked="{x:Bind _viewmodel.IsFloodingUnlimited, Mode=TwoWay}" IsEnabled="{x:Bind IsFloodingUnlimitedCheckBoxEnabled, Mode=OneWay}">无限次数</CheckBox>
 
         <ProgressBar Grid.Row="4" Margin="0,8,0,0" Background="{ThemeResource SystemBaseLowColor}" IsIndeterminate="{x:Bind IsProgressBarIndeterminate, Mode=OneWay}"
@@ -38,10 +38,11 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0">Github</Button>
+            <Button Grid.Column="0" Command="{x:Bind OpenGithubCommand}">Github</Button>
             <Button Grid.Column="1" HorizontalAlignment="Stretch" Style="{ThemeResource AccentButtonStyle}"
+                    Content="{x:Bind MasterButtonText, Mode=OneWay}" 
                     Command="{x:Bind MasterButtonCommand, Mode=OneWay}"
-                    Content="{x:Bind MasterButtonText, Mode=OneWay}" />
+                    IsEnabled="{x:Bind IsMasterButtonEnabled, Mode=OneWay}"/>
         </Grid>
     </Grid>
 </drastic:MicaWindow>
